[project]
name = "pyasdm"
version = "0.0.2"
description = ""
authors = [
    {name = "Bob Garwood", email="bgarwood@nrao.edu"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9, < 3.13"

dependencies = [
    'pytest',
    'pytest-cov',
    'pytest-html',
    'numpy'

]

[project.optional-dependencies]
docs = [
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]